feat: TE7-T117 Active Record Migrations
Create an author with first name, last name, dob, email
Add proper validations
Add a column ‘age’ in the author
Remove the column ‘age’ in the author
generate model books with ‘name’ and ‘price’. The price must be in decimal
Create a reference with the author. The author has many books
Create Data with migration for the author and book
Join the table author and books and display their data
Create any migration with up/down and reversible
Create data in database(10 records) of Books using seed file, Write code in seed file in a way that similar records should not create twice in DB.
Implement CRUD for all these tables using VIEW. Display data accordingly
Rename the column to dob to date_of_birth using reversible migrations.
Create sql file using scehma dump of database.

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: practicedb
+  database: practicedb_dev
   pool: 5
   host: localhost
   username: krutik
@@ -10,7 +10,7 @@ development:
 test:
   adapter: postgresql
   encoding: unicode
-  database: practicedb
+  database: practicedb_test
   pool: 5
   username: krutik
   password: 123
